tests/snapshots/file@base@limit@too_many_locals.lox.snap
---
source: tests/common/mod.rs
description: "fun f() {\n  // var v00; First slot already taken.\n\n  var v01; var v02; var v03; var v04; var v05; var v06; var v07;\n  var v08; var v09; var v0a; var v0b; var v0c; var v0d; var v0e; var v0f;\n\n  var v10; var v11; var v12; var v13; var v14; var v15; var v16; var v17;\n  var v18; var v19; var v1a; var v1b; var v1c; var v1d; var v1e; var v1f;\n\n  var v20; var v21; var v22; var v23; var v24; var v25; var v26; var v27;\n  var v28; var v29; var v2a; var v2b; var v2c; var v2d; var v2e; var v2f;\n\n  var v30; var v31; var v32; var v33; var v34; var v35; var v36; var v37;\n  var v38; var v39; var v3a; var v3b; var v3c; var v3d; var v3e; var v3f;\n\n  var v40; var v41; var v42; var v43; var v44; var v45; var v46; var v47;\n  var v48; var v49; var v4a; var v4b; var v4c; var v4d; var v4e; var v4f;\n\n  var v50; var v51; var v52; var v53; var v54; var v55; var v56; var v57;\n  var v58; var v59; var v5a; var v5b; var v5c; var v5d; var v5e; var v5f;\n\n  var v60; var v61; var v62; var v63; var v64; var v65; var v66; var v67;\n  var v68; var v69; var v6a; var v6b; var v6c; var v6d; var v6e; var v6f;\n\n  var v70; var v71; var v72; var v73; var v74; var v75; var v76; var v77;\n  var v78; var v79; var v7a; var v7b; var v7c; var v7d; var v7e; var v7f;\n\n  var v80; var v81; var v82; var v83; var v84; var v85; var v86; var v87;\n  var v88; var v89; var v8a; var v8b; var v8c; var v8d; var v8e; var v8f;\n\n  var v90; var v91; var v92; var v93; var v94; var v95; var v96; var v97;\n  var v98; var v99; var v9a; var v9b; var v9c; var v9d; var v9e; var v9f;\n\n  var va0; var va1; var va2; var va3; var va4; var va5; var va6; var va7;\n  var va8; var va9; var vaa; var vab; var vac; var vad; var vae; var vaf;\n\n  var vb0; var vb1; var vb2; var vb3; var vb4; var vb5; var vb6; var vb7;\n  var vb8; var vb9; var vba; var vbb; var vbc; var vbd; var vbe; var vbf;\n\n  var vc0; var vc1; var vc2; var vc3; var vc4; var vc5; var vc6; var vc7;\n  var vc8; var vc9; var vca; var vcb; var vcc; var vcd; var vce; var vcf;\n\n  var vd0; var vd1; var vd2; var vd3; var vd4; var vd5; var vd6; var vd7;\n  var vd8; var vd9; var vda; var vdb; var vdc; var vdd; var vde; var vdf;\n\n  var ve0; var ve1; var ve2; var ve3; var ve4; var ve5; var ve6; var ve7;\n  var ve8; var ve9; var vea; var veb; var vec; var ved; var vee; var vef;\n\n  var vf0; var vf1; var vf2; var vf3; var vf4; var vf5; var vf6; var vf7;\n  var vf8; var vf9; var vfa; var vfb; var vfc; var vfd; var vfe; var vff;\n\n  var oops; // Error at 'oops': Too many local variables in function.\n}\n"
input_file: crafting_interpreters_test_files/limit/too_many_locals.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × too many local variables
    ╭─[50:70]
 49 │   var vf0; var vf1; var vf2; var vf3; var vf4; var vf5; var vf6; var vf7;
 50 │   var vf8; var vf9; var vfa; var vfb; var vfc; var vfd; var vfe; var vff;
    ·                                                                      ─┬─
    ·                                                                       ╰── here
 51 │ 
    ╰────
Error:   × too many local variables
    ╭─[52:7]
 51 │ 
 52 │   var oops; // Error at 'oops': Too many local variables in function.
    ·       ──┬─
    ·         ╰── here
 53 │ }
    ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false, this, super', found '}'
    ╭─[53:1]
 52 │   var oops; // Error at 'oops': Too many local variables in function.
 53 │ }
    · ┬
    · ╰── here
    ╰────
